--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 }
 
 h1{
+    text-shadow: 0px 0px 20px red;
+    color: silver;
     display: block;
     top: 40px;
 position: absolute;
@@ -19,7 +21,7 @@ body{
  margin: 0px;
  justify-content: center;
  align-items: center;
- background-color: silver;
+ background-color: black;
  width: 100vw;
  height: 100vh;
 }
@@ -32,7 +34,7 @@ body{
     background-color: gray;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: 0 0 10px 2px;
+    box-shadow: 0 0 10px 2px red;
 }
 
 .btn-grid {
